--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 export FLASK_APP=flaskr
 export FLASK_DEBUG=1
+
+DATABASE_URI = "postgresql://postgres:postgres@localhost:5432/trivia"
+TEST_DATABASE_URI = "postgresql://postgres:postgres@localhost:5432/trivia_test"
